<resources>
    <string name="app_name">FeatherFinder</string>

    <string name="content_description">image</string>
    <string name="login_title">LOGIN</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_contact">Contact</string>
    <string name="btn_lbl_register">Register</string>
    <string name="current_passwordTxt">Current password</string>
    <string name="already_have_account">Already have an account?Login</string>
    <string name="reset_button">RESET</string>
    <string name="login"><u>Login</u></string>
    <string name="full_name_error_message">Please enter full name.</string>
    <string name="username_error_message">Please enter user name.</string>
    <string name="contact_error_message">Please enter 9 digits contact.</string>
    <string name="email_error_message">Please enter email.</string>
    <string name="password_error_message">Please enter password.</string>

    <!--TODO Step 3: For best practice define all the string values in the strings.xml file.-->
    <!--START-->
    <string name="et_hint_username">Username</string>
    <string name="welcome_note">Welcome to FeatherFinder</string>
    <string name="account_created">Account created successfully</string>
    <string name="login_err_message">Invalid user or password!</string>
    <string name="reset_err_message">User does not exists</string>
    <string name="title_activity_bird">BirdActivity</string>
    <string name="title_activity_ebird_maps">EBirdMapsActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="reset_password_message">Password reset successfully!!</string>
    <string name="enter_number_hint">Enter number</string>
    <string name="user_not_found">User does not exists in firestore!</string>
    <string name="please_enter_email">Please enter your email address</string>
    <string name="enter_email_and_password">Please enter both username and password</string>
    <string name="logged_in_success">Login successfully!</string>
    <string name="still_loading">Loadding...&#8230;</string>
    <string name="launch_app_text">Launch App</string>
    <string name="welcome_feather_finder">Welcome to FeatherFinder</string>
    <string name="get_started_text">Click button below</string>
    <!--END-->
</resources>