<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="237dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_logo"
        app:srcCompat="@drawable/logo_img" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/splash_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_border"
        android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/launch_app_btn"
        android:layout_width="236dp"
        android:layout_height="63dp"
        android:layout_below="@+id/get_started"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="@color/green"
        android:text="@string/launch_app_text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="30dp" />

    <TextView
        android:id="@+id/get_started"
        android:layout_width="268dp"
        android:layout_height="89dp"
        android:layout_below="@+id/welcome_text_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="70dp"
        android:background="@color/ic_launcher_background"
        android:gravity="center"
        android:text="@string/get_started_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="76dp"
        android:gravity="center"
        android:text="@string/welcome_feather_finder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp" />


</RelativeLayout>